--- a/office_emp_proj/emp_app/templates/view_all_emp.html
+++ b/office_emp_proj/emp_app/templates/view_all_emp.html
@@ -38,13 +38,13 @@
               <th scope="row">{{emp.id}}</th>
               <td>{{emp.first_name}}</td>
               <td>{{emp.last_name}}</td>
-              <td>emp.salary</td>
-              <td>emp.bonus</td>
-              <td>emp.phone</td>
-              <td>emp.role.name</td>
-              <td>emp.dept.name</td>
-              <td>emp.dept.location</td>
-              <td>emp.hire_date</td>
+              <td>{{emp.salary}}</td>
+              <td>{{emp.bonus}}</td>
+              <td>{{emp.phone}}</td>
+              <td>{{emp.role.name}}</td>
+              <td>{{emp.dept.name}}</td>
+              <td>{{emp.dept.location}}</td>
+              <td>{{emp.hire_date}}</td>
 
             </tr>
            
